<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddPaymentActivity"
    android:background="@drawable/backgroundwallet">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_payment_method"
        android:textSize="30sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_card_type"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:buttonTint="@color/black"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/visa"
                        android:contentDescription="@string/desc"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/mastercard"
                        android:contentDescription="@string/desc"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:src="@drawable/amex"
                        android:layout_marginEnd="50dp"
                        android:contentDescription="@string/desc"/>
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_cc_no"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/cc_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cc_no"
            android:maxLength="19"
            android:textSize="25sp"
            android:inputType="number|numberSigned"
            android:digits="0123456789 "
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_exp_date"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_mm"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:dropDownWidth="wrap_content"
                android:hint="@string/spinner_mm"
                android:spinnerMode="dropdown"
                android:visibility="visible"
                android:textSize="15sp"
                android:backgroundTint="@color/black">
            </Spinner>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:textSize="35sp"
                android:textColor="@color/black"/>

            <Spinner
                android:id="@+id/spinner_yyyy"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:dropDownWidth="wrap_content"
                android:hint="@string/spinner_yyyy"
                android:spinnerMode="dropdown"
                android:visibility="visible"
                android:textSize="15sp"
                android:backgroundTint="@color/black">
            </Spinner>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_cc_no"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cvv_no"
            android:inputType="numberPassword"
            android:maxLength="3"
            android:textSize="25sp"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/saveBtn"
                android:textSize="15sp"
                android:background="@drawable/signup"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/cancelBttn"
                android:background="@drawable/email"
                android:textColor="@color/black"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginStart="80dp"
                android:text="@string/cancelBttn"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>