<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    tools:context=".Activities.TopUpActivity"
    android:padding="10dp"
    android:background="@drawable/backgroundwallet">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Activities.TopUpActivity"
    android:padding="10dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topup_amt"
        android:textSize="25sp"
        android:layout_marginEnd="70dp"
        android:textColor="@color/black"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="50dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789."
        android:hint="Amount"
        android:inputType="number"
        android:maxLength="19"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_amt"
            android:textSize="20sp"
            android:layout_marginEnd="70dp"
            android:textColor="@color/black"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"/>

    <Button
        android:id="@+id/topupBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topupBtn"
        android:textColor="@color/black"
        android:background="@drawable/signup"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"/>

    <Button
        android:id="@+id/topupBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        android:textColor="@color/black"
        android:background="@drawable/email"/>






</LinearLayout>
</LinearLayout>